subarchitectures/dialogue.sa/trunk/apis/dialogue/src/java/de/dfki/lt/tr/dialogue/cplan/RuleParser.output
Terminals unused in grammar

   COMPARISON


Grammar

    0 $accept: rules $end

    1 rules: rule '.' rules
    2      | rule '.'

    3 rule: matches ARROW actions
    4     | error

    5 matches: expr gmatches

    6 gmatches: ',' gmatch gmatches
    7         | /* empty */

    8 gmatch: GVAR '^' expr
    9       | funcall '^' expr

   10 expr: term '^' expr
   11     | term '|' expr
   12     | term

   13 term: '<' id_lvar '>' term
   14     | '<' id_lvar '>'
   15     | feature

   16 feature: nominal
   17        | nominal id_lvar
   18        | ':' id_lvar
   19        | id_lvar
   20        | '!' term
   21        | '(' expr ')'

   22 nominal: ID ':'
   23        | VAR ':'
   24        | GVAR ':'

   25 id_lvar: VAR
   26        | ID

   27 funcall: ID '(' rargs ')'
   28        | ID '(' ')'

   29 actions: action
   30        | action ',' actions

   31 action: lval path '=' rexpr
   32       | lval path '^' rexpr
   33       | lval path '!' '<' ID '>'

   34 lval: VAR
   35     | '#'
   36     | GVAR

   37 path: '<' ID '>' path
   38     | /* empty */

   39 rexpr: rterm '^' rexpr
   40      | rterm

   41 rterm: '<' ID '>' rterm
   42      | rfeat

   43 rfeat: rnominal
   44      | rnominal r_id_var
   45      | ':' r_id_var
   46      | r_id_var
   47      | '(' rexpr ')'
   48      | ID '(' rargs ')'
   49      | ID '(' ')'

   50 rnominal: r_id_var ':'

   51 rargs: rarg ',' rargs
   52      | rarg

   53 rarg: r_id_var
   54     | STRING
   55     | '#'

   56 r_id_var: ID
   57         | VAR
   58         | GVAR


Terminals, with rules where they appear

$end (0) 0
'!' (33) 20 33
'#' (35) 35 55
'(' (40) 21 27 28 47 48 49
')' (41) 21 27 28 47 48 49
',' (44) 6 30 51
'.' (46) 1 2
':' (58) 18 22 23 24 45 50
'<' (60) 13 14 33 37 41
'=' (61) 31
'>' (62) 13 14 33 37 41
'^' (94) 8 9 10 32 39
'|' (124) 11
error (256) 4
ID (258) 22 26 27 28 33 37 41 48 49 56
VAR (259) 23 25 34 57
GVAR (260) 8 24 36 58
COMPARISON (261)
ARROW (262) 3
STRING (263) 54


Nonterminals, with rules where they appear

$accept (21)
    on left: 0
rules (22)
    on left: 1 2, on right: 0 1
rule (23)
    on left: 3 4, on right: 1 2
matches (24)
    on left: 5, on right: 3
gmatches (25)
    on left: 6 7, on right: 5 6
gmatch (26)
    on left: 8 9, on right: 6
expr (27)
    on left: 10 11 12, on right: 5 8 9 10 11 21
term (28)
    on left: 13 14 15, on right: 10 11 12 13 20
feature (29)
    on left: 16 17 18 19 20 21, on right: 15
nominal (30)
    on left: 22 23 24, on right: 16 17
id_lvar (31)
    on left: 25 26, on right: 13 14 17 18 19
funcall (32)
    on left: 27 28, on right: 9
actions (33)
    on left: 29 30, on right: 3 30
action (34)
    on left: 31 32 33, on right: 29 30
lval (35)
    on left: 34 35 36, on right: 31 32 33
path (36)
    on left: 37 38, on right: 31 32 33 37
rexpr (37)
    on left: 39 40, on right: 31 32 39 47
rterm (38)
    on left: 41 42, on right: 39 40 41
rfeat (39)
    on left: 43 44 45 46 47 48 49, on right: 42
rnominal (40)
    on left: 50, on right: 43 44
rargs (41)
    on left: 51 52, on right: 27 48 51
rarg (42)
    on left: 53 54 55, on right: 51 52
r_id_var (43)
    on left: 56 57 58, on right: 44 45 46 50 53


state 0

    0 $accept: . rules $end

    error  shift, and go to state 1
    ID     shift, and go to state 2
    VAR    shift, and go to state 3
    GVAR   shift, and go to state 4
    '<'    shift, and go to state 5
    ':'    shift, and go to state 6
    '!'    shift, and go to state 7
    '('    shift, and go to state 8

    rules    go to state 9
    rule     go to state 10
    matches  go to state 11
    expr     go to state 12
    term     go to state 13
    feature  go to state 14
    nominal  go to state 15
    id_lvar  go to state 16


state 1

    4 rule: error .

    $default  reduce using rule 4 (rule)


state 2

   22 nominal: ID . ':'
   26 id_lvar: ID .

    ':'  shift, and go to state 17

    $default  reduce using rule 26 (id_lvar)


state 3

   23 nominal: VAR . ':'
   25 id_lvar: VAR .

    ':'  shift, and go to state 18

    $default  reduce using rule 25 (id_lvar)


state 4

   24 nominal: GVAR . ':'

    ':'  shift, and go to state 19


state 5

   13 term: '<' . id_lvar '>' term
   14     | '<' . id_lvar '>'

    ID   shift, and go to state 20
    VAR  shift, and go to state 21

    id_lvar  go to state 22


state 6

   18 feature: ':' . id_lvar

    ID   shift, and go to state 20
    VAR  shift, and go to state 21

    id_lvar  go to state 23


state 7

   20 feature: '!' . term

    ID    shift, and go to state 2
    VAR   shift, and go to state 3
    GVAR  shift, and go to state 4
    '<'   shift, and go to state 5
    ':'   shift, and go to state 6
    '!'   shift, and go to state 7
    '('   shift, and go to state 8

    term     go to state 24
    feature  go to state 14
    nominal  go to state 15
    id_lvar  go to state 16


state 8

   21 feature: '(' . expr ')'

    ID    shift, and go to state 2
    VAR   shift, and go to state 3
    GVAR  shift, and go to state 4
    '<'   shift, and go to state 5
    ':'   shift, and go to state 6
    '!'   shift, and go to state 7
    '('   shift, and go to state 8

    expr     go to state 25
    term     go to state 13
    feature  go to state 14
    nominal  go to state 15
    id_lvar  go to state 16


state 9

    0 $accept: rules . $end

    $end  shift, and go to state 26


state 10

    1 rules: rule . '.' rules
    2      | rule . '.'

    '.'  shift, and go to state 27


state 11

    3 rule: matches . ARROW actions

    ARROW  shift, and go to state 28


state 12

    5 matches: expr . gmatches

    ','  shift, and go to state 29

    $default  reduce using rule 7 (gmatches)

    gmatches  go to state 30


state 13

   10 expr: term . '^' expr
   11     | term . '|' expr
   12     | term .

    '^'  shift, and go to state 31
    '|'  shift, and go to state 32

    $default  reduce using rule 12 (expr)


state 14

   15 term: feature .

    $default  reduce using rule 15 (term)


state 15

   16 feature: nominal .
   17        | nominal . id_lvar

    ID   shift, and go to state 20
    VAR  shift, and go to state 21

    $default  reduce using rule 16 (feature)

    id_lvar  go to state 33


state 16

   19 feature: id_lvar .

    $default  reduce using rule 19 (feature)


state 17

   22 nominal: ID ':' .

    $default  reduce using rule 22 (nominal)


state 18

   23 nominal: VAR ':' .

    $default  reduce using rule 23 (nominal)


state 19

   24 nominal: GVAR ':' .

    $default  reduce using rule 24 (nominal)


state 20

   26 id_lvar: ID .

    $default  reduce using rule 26 (id_lvar)


state 21

   25 id_lvar: VAR .

    $default  reduce using rule 25 (id_lvar)


state 22

   13 term: '<' id_lvar . '>' term
   14     | '<' id_lvar . '>'

    '>'  shift, and go to state 34


state 23

   18 feature: ':' id_lvar .

    $default  reduce using rule 18 (feature)


state 24

   20 feature: '!' term .

    $default  reduce using rule 20 (feature)


state 25

   21 feature: '(' expr . ')'

    ')'  shift, and go to state 35


state 26

    0 $accept: rules $end .

    $default  accept


state 27

    1 rules: rule '.' . rules
    2      | rule '.' .

    error  shift, and go to state 1
    ID     shift, and go to state 2
    VAR    shift, and go to state 3
    GVAR   shift, and go to state 4
    '<'    shift, and go to state 5
    ':'    shift, and go to state 6
    '!'    shift, and go to state 7
    '('    shift, and go to state 8

    $end  reduce using rule 2 (rules)

    rules    go to state 36
    rule     go to state 10
    matches  go to state 11
    expr     go to state 12
    term     go to state 13
    feature  go to state 14
    nominal  go to state 15
    id_lvar  go to state 16


state 28

    3 rule: matches ARROW . actions

    VAR   shift, and go to state 37
    GVAR  shift, and go to state 38
    '#'   shift, and go to state 39

    actions  go to state 40
    action   go to state 41
    lval     go to state 42


state 29

    6 gmatches: ',' . gmatch gmatches

    ID    shift, and go to state 43
    GVAR  shift, and go to state 44

    gmatch   go to state 45
    funcall  go to state 46


state 30

    5 matches: expr gmatches .

    $default  reduce using rule 5 (matches)


state 31

   10 expr: term '^' . expr

    ID    shift, and go to state 2
    VAR   shift, and go to state 3
    GVAR  shift, and go to state 4
    '<'   shift, and go to state 5
    ':'   shift, and go to state 6
    '!'   shift, and go to state 7
    '('   shift, and go to state 8

    expr     go to state 47
    term     go to state 13
    feature  go to state 14
    nominal  go to state 15
    id_lvar  go to state 16


state 32

   11 expr: term '|' . expr

    ID    shift, and go to state 2
    VAR   shift, and go to state 3
    GVAR  shift, and go to state 4
    '<'   shift, and go to state 5
    ':'   shift, and go to state 6
    '!'   shift, and go to state 7
    '('   shift, and go to state 8

    expr     go to state 48
    term     go to state 13
    feature  go to state 14
    nominal  go to state 15
    id_lvar  go to state 16


state 33

   17 feature: nominal id_lvar .

    $default  reduce using rule 17 (feature)


state 34

   13 term: '<' id_lvar '>' . term
   14     | '<' id_lvar '>' .

    ID    shift, and go to state 2
    VAR   shift, and go to state 3
    GVAR  shift, and go to state 4
    '<'   shift, and go to state 5
    ':'   shift, and go to state 6
    '!'   shift, and go to state 7
    '('   shift, and go to state 8

    $default  reduce using rule 14 (term)

    term     go to state 49
    feature  go to state 14
    nominal  go to state 15
    id_lvar  go to state 16


state 35

   21 feature: '(' expr ')' .

    $default  reduce using rule 21 (feature)


state 36

    1 rules: rule '.' rules .

    $default  reduce using rule 1 (rules)


state 37

   34 lval: VAR .

    $default  reduce using rule 34 (lval)


state 38

   36 lval: GVAR .

    $default  reduce using rule 36 (lval)


state 39

   35 lval: '#' .

    $default  reduce using rule 35 (lval)


state 40

    3 rule: matches ARROW actions .

    $default  reduce using rule 3 (rule)


state 41

   29 actions: action .
   30        | action . ',' actions

    ','  shift, and go to state 50

    $default  reduce using rule 29 (actions)


state 42

   31 action: lval . path '=' rexpr
   32       | lval . path '^' rexpr
   33       | lval . path '!' '<' ID '>'

    '<'  shift, and go to state 51

    $default  reduce using rule 38 (path)

    path  go to state 52


state 43

   27 funcall: ID . '(' rargs ')'
   28        | ID . '(' ')'

    '('  shift, and go to state 53


state 44

    8 gmatch: GVAR . '^' expr

    '^'  shift, and go to state 54


state 45

    6 gmatches: ',' gmatch . gmatches

    ','  shift, and go to state 29

    $default  reduce using rule 7 (gmatches)

    gmatches  go to state 55


state 46

    9 gmatch: funcall . '^' expr

    '^'  shift, and go to state 56


state 47

   10 expr: term '^' expr .

    $default  reduce using rule 10 (expr)


state 48

   11 expr: term '|' expr .

    $default  reduce using rule 11 (expr)


state 49

   13 term: '<' id_lvar '>' term .

    $default  reduce using rule 13 (term)


state 50

   30 actions: action ',' . actions

    VAR   shift, and go to state 37
    GVAR  shift, and go to state 38
    '#'   shift, and go to state 39

    actions  go to state 57
    action   go to state 41
    lval     go to state 42


state 51

   37 path: '<' . ID '>' path

    ID  shift, and go to state 58


state 52

   31 action: lval path . '=' rexpr
   32       | lval path . '^' rexpr
   33       | lval path . '!' '<' ID '>'

    '^'  shift, and go to state 59
    '!'  shift, and go to state 60
    '='  shift, and go to state 61


state 53

   27 funcall: ID '(' . rargs ')'
   28        | ID '(' . ')'

    ID      shift, and go to state 62
    VAR     shift, and go to state 63
    GVAR    shift, and go to state 64
    STRING  shift, and go to state 65
    ')'     shift, and go to state 66
    '#'     shift, and go to state 67

    rargs     go to state 68
    rarg      go to state 69
    r_id_var  go to state 70


state 54

    8 gmatch: GVAR '^' . expr

    ID    shift, and go to state 2
    VAR   shift, and go to state 3
    GVAR  shift, and go to state 4
    '<'   shift, and go to state 5
    ':'   shift, and go to state 6
    '!'   shift, and go to state 7
    '('   shift, and go to state 8

    expr     go to state 71
    term     go to state 13
    feature  go to state 14
    nominal  go to state 15
    id_lvar  go to state 16


state 55

    6 gmatches: ',' gmatch gmatches .

    $default  reduce using rule 6 (gmatches)


state 56

    9 gmatch: funcall '^' . expr

    ID    shift, and go to state 2
    VAR   shift, and go to state 3
    GVAR  shift, and go to state 4
    '<'   shift, and go to state 5
    ':'   shift, and go to state 6
    '!'   shift, and go to state 7
    '('   shift, and go to state 8

    expr     go to state 72
    term     go to state 13
    feature  go to state 14
    nominal  go to state 15
    id_lvar  go to state 16


state 57

   30 actions: action ',' actions .

    $default  reduce using rule 30 (actions)


state 58

   37 path: '<' ID . '>' path

    '>'  shift, and go to state 73


state 59

   32 action: lval path '^' . rexpr

    ID    shift, and go to state 74
    VAR   shift, and go to state 63
    GVAR  shift, and go to state 64
    '<'   shift, and go to state 75
    ':'   shift, and go to state 76
    '('   shift, and go to state 77

    rexpr     go to state 78
    rterm     go to state 79
    rfeat     go to state 80
    rnominal  go to state 81
    r_id_var  go to state 82


state 60

   33 action: lval path '!' . '<' ID '>'

    '<'  shift, and go to state 83


state 61

   31 action: lval path '=' . rexpr

    ID    shift, and go to state 74
    VAR   shift, and go to state 63
    GVAR  shift, and go to state 64
    '<'   shift, and go to state 75
    ':'   shift, and go to state 76
    '('   shift, and go to state 77

    rexpr     go to state 84
    rterm     go to state 79
    rfeat     go to state 80
    rnominal  go to state 81
    r_id_var  go to state 82


state 62

   56 r_id_var: ID .

    $default  reduce using rule 56 (r_id_var)


state 63

   57 r_id_var: VAR .

    $default  reduce using rule 57 (r_id_var)


state 64

   58 r_id_var: GVAR .

    $default  reduce using rule 58 (r_id_var)


state 65

   54 rarg: STRING .

    $default  reduce using rule 54 (rarg)


state 66

   28 funcall: ID '(' ')' .

    $default  reduce using rule 28 (funcall)


state 67

   55 rarg: '#' .

    $default  reduce using rule 55 (rarg)


state 68

   27 funcall: ID '(' rargs . ')'

    ')'  shift, and go to state 85


state 69

   51 rargs: rarg . ',' rargs
   52      | rarg .

    ','  shift, and go to state 86

    $default  reduce using rule 52 (rargs)


state 70

   53 rarg: r_id_var .

    $default  reduce using rule 53 (rarg)


state 71

    8 gmatch: GVAR '^' expr .

    $default  reduce using rule 8 (gmatch)


state 72

    9 gmatch: funcall '^' expr .

    $default  reduce using rule 9 (gmatch)


state 73

   37 path: '<' ID '>' . path

    '<'  shift, and go to state 51

    $default  reduce using rule 38 (path)

    path  go to state 87


state 74

   48 rfeat: ID . '(' rargs ')'
   49      | ID . '(' ')'
   56 r_id_var: ID .

    '('  shift, and go to state 88

    $default  reduce using rule 56 (r_id_var)


state 75

   41 rterm: '<' . ID '>' rterm

    ID  shift, and go to state 89


state 76

   45 rfeat: ':' . r_id_var

    ID    shift, and go to state 62
    VAR   shift, and go to state 63
    GVAR  shift, and go to state 64

    r_id_var  go to state 90


state 77

   47 rfeat: '(' . rexpr ')'

    ID    shift, and go to state 74
    VAR   shift, and go to state 63
    GVAR  shift, and go to state 64
    '<'   shift, and go to state 75
    ':'   shift, and go to state 76
    '('   shift, and go to state 77

    rexpr     go to state 91
    rterm     go to state 79
    rfeat     go to state 80
    rnominal  go to state 81
    r_id_var  go to state 82


state 78

   32 action: lval path '^' rexpr .

    $default  reduce using rule 32 (action)


state 79

   39 rexpr: rterm . '^' rexpr
   40      | rterm .

    '^'  shift, and go to state 92

    $default  reduce using rule 40 (rexpr)


state 80

   42 rterm: rfeat .

    $default  reduce using rule 42 (rterm)


state 81

   43 rfeat: rnominal .
   44      | rnominal . r_id_var

    ID    shift, and go to state 62
    VAR   shift, and go to state 63
    GVAR  shift, and go to state 64

    $default  reduce using rule 43 (rfeat)

    r_id_var  go to state 93


state 82

   46 rfeat: r_id_var .
   50 rnominal: r_id_var . ':'

    ':'  shift, and go to state 94

    $default  reduce using rule 46 (rfeat)


state 83

   33 action: lval path '!' '<' . ID '>'

    ID  shift, and go to state 95


state 84

   31 action: lval path '=' rexpr .

    $default  reduce using rule 31 (action)


state 85

   27 funcall: ID '(' rargs ')' .

    $default  reduce using rule 27 (funcall)


state 86

   51 rargs: rarg ',' . rargs

    ID      shift, and go to state 62
    VAR     shift, and go to state 63
    GVAR    shift, and go to state 64
    STRING  shift, and go to state 65
    '#'     shift, and go to state 67

    rargs     go to state 96
    rarg      go to state 69
    r_id_var  go to state 70


state 87

   37 path: '<' ID '>' path .

    $default  reduce using rule 37 (path)


state 88

   48 rfeat: ID '(' . rargs ')'
   49      | ID '(' . ')'

    ID      shift, and go to state 62
    VAR     shift, and go to state 63
    GVAR    shift, and go to state 64
    STRING  shift, and go to state 65
    ')'     shift, and go to state 97
    '#'     shift, and go to state 67

    rargs     go to state 98
    rarg      go to state 69
    r_id_var  go to state 70


state 89

   41 rterm: '<' ID . '>' rterm

    '>'  shift, and go to state 99


state 90

   45 rfeat: ':' r_id_var .

    $default  reduce using rule 45 (rfeat)


state 91

   47 rfeat: '(' rexpr . ')'

    ')'  shift, and go to state 100


state 92

   39 rexpr: rterm '^' . rexpr

    ID    shift, and go to state 74
    VAR   shift, and go to state 63
    GVAR  shift, and go to state 64
    '<'   shift, and go to state 75
    ':'   shift, and go to state 76
    '('   shift, and go to state 77

    rexpr     go to state 101
    rterm     go to state 79
    rfeat     go to state 80
    rnominal  go to state 81
    r_id_var  go to state 82


state 93

   44 rfeat: rnominal r_id_var .

    $default  reduce using rule 44 (rfeat)


state 94

   50 rnominal: r_id_var ':' .

    $default  reduce using rule 50 (rnominal)


state 95

   33 action: lval path '!' '<' ID . '>'

    '>'  shift, and go to state 102


state 96

   51 rargs: rarg ',' rargs .

    $default  reduce using rule 51 (rargs)


state 97

   49 rfeat: ID '(' ')' .

    $default  reduce using rule 49 (rfeat)


state 98

   48 rfeat: ID '(' rargs . ')'

    ')'  shift, and go to state 103


state 99

   41 rterm: '<' ID '>' . rterm

    ID    shift, and go to state 74
    VAR   shift, and go to state 63
    GVAR  shift, and go to state 64
    '<'   shift, and go to state 75
    ':'   shift, and go to state 76
    '('   shift, and go to state 77

    rterm     go to state 104
    rfeat     go to state 80
    rnominal  go to state 81
    r_id_var  go to state 82


state 100

   47 rfeat: '(' rexpr ')' .

    $default  reduce using rule 47 (rfeat)


state 101

   39 rexpr: rterm '^' rexpr .

    $default  reduce using rule 39 (rexpr)


state 102

   33 action: lval path '!' '<' ID '>' .

    $default  reduce using rule 33 (action)


state 103

   48 rfeat: ID '(' rargs ')' .

    $default  reduce using rule 48 (rfeat)


state 104

   41 rterm: '<' ID '>' rterm .

    $default  reduce using rule 41 (rterm)
